Fixed box-shadow issue and alignment

--- a/frontend/static/css/card.css
+++ b/frontend/static/css/card.css
@@ -9,15 +9,10 @@
 .card-current-weather {
     display: flex;
     width: 100%;
+    padding: 1rem;
     border-radius: 15px;
     border: 2px solid hsl(0 0% 90%);
     background-color: hsl(0 0% 100%);
-    transition: box-shadow 200ms ease-in-out;
-}
-
-.location-container {
-    margin-top: 1rem;
-    margin-left: 1rem;
 }
 
 .location-container .location {
@@ -36,6 +31,16 @@
 
 /* ---- Card for 5 days weather ---- */
 
+.forecast-container {
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 1rem;
+    max-width: calc(850px + 12px);
+    padding: 12px;
+    margin: -12px;
+    overflow-x: scroll;
+}
+
 .card {
     display: flex;
     flex-direction: column;
@@ -44,7 +49,6 @@
     border-radius: 15px;
     min-width: 250px;
     background-color: hsl(0 0% 100%);
-    transition: box-shadow 200ms ease-in-out;
 }
 
 .card:hover,
@@ -126,14 +130,7 @@
     margin-inline: auto;
 }
 
-.forecast-container {
-    display: flex;
-    flex-wrap: nowrap;
-    gap: 1rem;
-    max-width: calc(850px + 1rem);
-    padding-block: 1rem;
-    overflow-x: auto;
-}
+/* ----- Animations ----- */
 
 @keyframes fadeIn {
     to {
@@ -145,6 +142,11 @@
 .fade-in {
     opacity: 0;
     transform: translateX(-10px);
-    transition: opacity 0.5s ease, transform 0.5s ease;
     animation: fadeIn 0.5s ease forwards;
+}
+
+.card,
+.card-current-weather {
+    transition: opacity 500ms ease, transform 500ms ease,
+        box-shadow 200ms ease-in-out;
 }
