--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -8,7 +8,9 @@ html,
 body {
     margin: 0;
     padding: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+        Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+        sans-serif;
     line-height: 1.5;
 }
 
@@ -22,7 +24,7 @@ img {
 }
 
 #app {
-    max-width: calc(850px + 1rem);
+    max-width: 850px;
     margin-top: 100px;
     margin-inline: auto;
     padding-inline: 1rem;
